--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,7 +56,10 @@
     "WEAPON_SMELTING_PLUS_1": "Refine+1",
     "WEAPON_SMELTING_PLUS_2": "Refine+2",
     "WEAPON_SMELTING_PLUS_3": "Refine+3",
-    "WEAPON_SMELTING_PLUS_4": "Refine+4"
+    "WEAPON_SMELTING_PLUS_4": "Refine+4",
+    "CHARACTER_LEVEL_90": "Level 90",
+    "CHARACTER_LEVEL_95": "Level 95",
+    "CHARACTER_LEVEL_100": "Level 100"
   },
   "SYS": {
     "DELETE": "Delete",
@@ -164,8 +167,8 @@
     "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier Bonus",
     "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier Bonus",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Bonus",
-    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "Moon Electro-Charged DMG Multiplier Bonus",
-    "DMG_RATE_MULTI_MOON_RUPTURE": "月绽放伤害倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "Lunar Electro-Charged DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_MOON_RUPTURE": "Lunar Rupture DMG Multiplier Bonus",
     "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
     "DMG_VAL_UP_ANEMO": "Anemo DMG Increase",
     "DMG_VAL_UP_PHYSICAL": "Physical DMG Increase",
@@ -202,7 +205,7 @@
     "DMG_CRIT_RATE_UP_WEAPON": "Weapon DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_OTHER": "Other DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_SET": "Artifact DMG CRIT Rate Increase",
-    "DMG_CRIT_RATE_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_ELEMENT_MOON_RUPTURE": "Lunar Rupture DMG CRIT Rate Increase",
     "DMG_CRIT_DMG_UP_CRYO": "Cryo DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_ANEMO": "Anemo DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_PHYSICAL": "Physical DMG CRIT DMG Increase",
@@ -220,30 +223,32 @@
     "DMG_CRIT_DMG_UP_WEAPON": "Weapon DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_OTHER": "Other DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_SET": "Artifact DMG CRIT DMG Increase",
-    "DMG_CRIT_DMG_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_ELEMENT_MOON_RUPTURE": "Lunar Rupture DMG CRIT DMG Increase",
     "DMG_ELEMENT_UP": "Element Amplification (All)",
-    "DMG_ELEMENT_MOON_ALL_UP": "元素増幅(月曜)",
+    "DMG_ELEMENT_MOON_ALL_UP": "Element Amplification (Lunar Reaction)",
     "DMG_ELEMENT_VAPORIZE_UP": "Element Amplification (Vaporize)",
     "DMG_ELEMENT_MELT_UP": "Element Amplification (Melt)",
     "DMG_ELEMENT_OVERLOADED_UP": "Element Amplification (Overloaded)",
     "DMG_ELEMENT_BURNING_UP": "Element Amplification (Burning)",
     "DMG_ELEMENT_ELECTROCHARGED_UP": "Element Amplification (Electrocharged)",
-    "DMG_ELEMENT_MOON_ELECTROCHARGED_UP": "Element Amplification (Moon Electro-Charged)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_UP": "Element Amplification (Lunar Electro-Charged)",
     "DMG_ELEMENT_SUPERCONDUCT_UP": "Element Amplification (Superconduct)",
     "DMG_ELEMENT_SWIRL_VAL_UP": "Element Amplification (Swirl Increase)",
     "DMG_ELEMENT_SWIRL_UP": "Element Amplification (Swirl)",
     "DMG_ELEMENT_DESTRUCTION_UP": "Element Amplification (Destruction)",
     "DMG_ELEMENT_SHIELD_UP": "Element Amplification (Elemental Shield)",
     "DMG_ELEMENT_RUPTURE_UP": "Element Amplification (Rupture)",
-    "DMG_ELEMENT_MOON_RUPTURE_UP": "元素増幅(月绽放)",
+    "DMG_ELEMENT_MOON_RUPTURE_UP": "Element Amplification (Lunar Rupture)",
     "DMG_ELEMENT_BURGEON_UP": "Element Amplification (Burgeon)",
     "DMG_ELEMENT_HYPERBLOOM_UP": "Element Amplification (Hyperbloom)",
     "DMG_ELEMENT_AGGRAVATE_UP": "Element Amplification (Aggravate)",
     "DMG_ELEMENT_SPREAD_UP": "Element Amplification (Spread)",
-    "DMG_ELEMENT_MOON_RUPTURE_EXTRA_VAL_UP": "元素提升值(月绽放)",
-    "DMG_ELEMENT_RUPTURE_EXTRA_VAL_UP": "元素提升值(绽放)",
-    "DMG_ELEMENT_BURGEON_EXTRA_VAL_UP": "元素提升值(烈绽放)",
-    "DMG_ELEMENT_HYPERBLOOM_EXTRA_VAL_UP": "元素提升值(超绽放)",
+    "DMG_ELEMENT_MOON_RUPTURE_EXTRA_VAL_UP": "Element Increase (Lunar Rupture)",
+    "DMG_ELEMENT_RUPTURE_EXTRA_VAL_UP": "Element Increase (Rupture)",
+    "DMG_ELEMENT_BURGEON_EXTRA_VAL_UP": "Element Increase (Burgeon)",
+    "DMG_ELEMENT_HYPERBLOOM_EXTRA_VAL_UP": "Element Increase (Hyperbloom)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_PROMOTION": "Element Elevate (Lunar Electro-Charged)",
+    "DMG_ELEMENT_MOON_RUPTURE_PROMOTION": "Element Elevate (Lunar Rupture)",
     "DMG_ENEMY_DEFENSE_BASE": "Enemy Basic Defense",
     "DMG_ENEMY_DEFENSE": "Enemy Defense",
     "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Decrease",
@@ -308,15 +313,15 @@
       "DESTRUCTION": "Destruction Damage",
       "SHIELD": "Basic Shield Amount",
       "SHIELD_SPECIAL": "Corr Element Absorption",
-      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "Non-CRIT Moon Electro-Charged DMG (Direct)",
-      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "CRIT Moon Electro-Charged DMG (Direct)",
-      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "Expected Moon Electro-Charged DMG (Direct)",
-      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "Non-CRIT Moon Electro-Charged DMG (Reactional)",
-      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "CRIT Moon Electro-Charged DMG (Reactional)",
-      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "Expected Moon Electro-Charged DMG (Reactional)",
-      "ORIGIN_MOON_RUPTURE_DIRECTLY": "非暴击月绽放伤害(直接)",
-      "CRIT_MOON_RUPTURE_DIRECTLY": "暴击月绽放伤害(直接)",
-      "EXPECT_MOON_RUPTURE_DIRECTLY": "期望月绽放伤害(直接)"
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "Non-CRIT Lunar Electro-Charged DMG (Direct)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "CRIT Lunar Electro-Charged DMG (Direct)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "Expected Lunar Electro-Charged DMG (Direct)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "Non-CRIT Lunar Electro-Charged DMG (Reactional)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "CRIT Lunar Electro-Charged DMG (Reactional)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "Expected Lunar Electro-Charged DMG (Reactional)",
+      "ORIGIN_MOON_RUPTURE_DIRECTLY": "Non-CRIT Lunar Rupture DMG (Direct)",
+      "CRIT_MOON_RUPTURE_DIRECTLY": "CRIT Lunar Rupture DMG (Direct)",
+      "EXPECT_MOON_RUPTURE_DIRECTLY": "Expected Lunar Rupture DMG (Direct)"
     },
     "OTHER": {
       "HEALING": "Healing",
@@ -383,13 +388,13 @@
       "DMG_AGGRAVATE_BASE": "Aggravate Base Section",
       "DMG_SPREAD_BASE": "Spread Base Section",
       "DMG_HYPER_BLOOM_BASE": "Hyper Bloom Base Section",
-      "DMG_HYPER_BLOOM_EXTRA_VAL": "超绽放额外提升区",
+      "DMG_HYPER_BLOOM_EXTRA_VAL": "Hyper Bloom Additional Increase Section",
       "DMG_HYPER_BLOOM_RATE": "Hyper Bloom Up Section",
       "DMG_BURGEON_BASE": "Burgeon Base Section",
-      "DMG_BURGEON_EXTRA_VAL": "烈绽放额外提升区",
+      "DMG_BURGEON_EXTRA_VAL": "Burgeon Additional Increase Section",
       "DMG_BURGEON_RATE": "Burgeon Up Section",
       "DMG_RUPTURE_BASE": "Rupture Base Section",
-      "DMG_RUPTURE_EXTRA_VAL": "绽放额外提升区",
+      "DMG_RUPTURE_EXTRA_VAL": "Rupture Additional Increase Section",
       "DMG_RUPTURE_RATE": "Rupture Up Section",
       "DMG_SHIELD_SPECIAL_RATE": "Corresponding Element Section",
       "HEALING_BASE": "Healing Base Section",
@@ -400,22 +405,22 @@
       "SHIELD_SPECIAL_ELEMENT_ABS": "Corresponding Element Absorption Section",
       "SHIELD_GEO_ELEMENT_ABS": "All Element Absorption Section",
       "PRODUCT_BASE": "Production HP Base Section",
-      "DMG_MOON_ELECTRO_CHARGED_DIRECTLY_BASE": "Direct Moon Electro-Charged DMG Base Multiplier",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_1": "[Member 1] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_2": "[Member 2] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_3": "[Member 3] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_4": "[Member 4] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_1": "[Member 1] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_2": "[Member 2] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[Member 3] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[Member 4] Reactional Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "Expected Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_RATE": "Moon Electro-Charged Amplification Multiplier",
-      "DMG_ELEMENT_MOON_ELECTROCHARGED_PROMOTION": "月感电擢升区",
-      "DMG_MOON_RUPTURE_DIRECTLY_BASE": "直伤月绽放基础乘区",
-      "DMG_MOON_RUPTURE_DIRECTLY_RATE": "月绽放増幅乘区",
-      "DMG_MOON_RUPTURE_DIRECTLY_EXTRA_VAL": "月绽放额外提升区",
-      "DMG_ELEMENT_MOON_RUPTURE_PROMOTION": "月绽放擢升区"
+      "DMG_MOON_ELECTRO_CHARGED_DIRECTLY_BASE": "Direct Lunar Electro-Charged DMG Base Multiplier",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_1": "[Member 1] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_2": "[Member 2] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_3": "[Member 3] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_4": "[Member 4] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_1": "[Member 1] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_2": "[Member 2] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[Member 3] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[Member 4] Reactional Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "Expected Lunar Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "Lunar Electro-Charged Amplification Multiplier",
+      "DMG_ELEMENT_MOON_ELECTROCHARGED_PROMOTION": "Lunar Electro-Charged Elevate Section",
+      "DMG_MOON_RUPTURE_DIRECTLY_BASE": "Direct Lunar Rupture Base Section",
+      "DMG_MOON_RUPTURE_DIRECTLY_RATE": "Lunar Rupture Amplification Multiplier",
+      "DMG_MOON_RUPTURE_DIRECTLY_EXTRA_VAL": "Lunar Rupture Additional Increase Section",
+      "DMG_ELEMENT_MOON_RUPTURE_PROMOTION": "Lunar Rupture Elevate Section"
     }
   },
   "ENKA": {
@@ -616,7 +621,7 @@
       "TITLE": "Secret Law"
     },
     "MOON_LEVEL": {
-      "TITLE": "月兆等级"
+      "TITLE": "Moonsign Level"
     }
   },
   "MENU": {
